--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "tailwindcss": "^3.0.23"
-  }
+  },
+  "scripts": {
+    "tw": "npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+   }
 }
